recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:6: error: recursive method spiral needs result type
    spiral(steps-1, angle, length+increment, increment)
    ^